crates/djls-templates/src/snapshots/djls_templates__parser__tests__django__malformed_filter_expression_becomes_error_node.snap
---
source: crates/djls-templates/src/parser.rs
assertion_line: 483
expression: test_nodelist
---
nodelist:
  - type: Error
    span:
      - 2
      - 8
    full_span:
      - 0
      - 12
    error:
      MalformedFilterExpression:
        position: 10
        content: ""
