crates/djls-templates/src/snapshots/djls_templates__parser__tests__django__parse_complex_if_elif.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Tag
    name: if
    name_span:
      - 3
      - 2
    arguments:
      - text: x
        span:
          - 6
          - 1
      - text: ">"
        span:
          - 8
          - 1
      - text: "0"
        span:
          - 10
          - 1
    span:
      - 2
      - 10
    full_span:
      - 0
      - 14
  - type: Text
    span:
      - 14
      - 8
    full_span:
      - 14
      - 8
  - type: Tag
    name: elif
    name_span:
      - 25
      - 4
    arguments:
      - text: x
        span:
          - 30
          - 1
      - text: "<"
        span:
          - 32
          - 1
      - text: "0"
        span:
          - 34
          - 1
    span:
      - 24
      - 12
    full_span:
      - 22
      - 16
  - type: Text
    span:
      - 38
      - 8
    full_span:
      - 38
      - 8
  - type: Tag
    name: else
    name_span:
      - 49
      - 4
    arguments: []
    span:
      - 48
      - 6
    full_span:
      - 46
      - 10
  - type: Text
    span:
      - 56
      - 4
    full_span:
      - 56
      - 4
  - type: Tag
    name: endif
    name_span:
      - 63
      - 5
    arguments: []
    span:
      - 62
      - 7
    full_span:
      - 60
      - 11
