crates/djls-templates/src/snapshots/djls_templates__parser__tests__django__parse_django_for_block.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Tag
    name: for
    name_span:
      - 3
      - 3
    arguments:
      - text: item
        span:
          - 7
          - 4
      - text: in
        span:
          - 12
          - 2
      - text: items
        span:
          - 15
          - 5
    span:
      - 2
      - 19
    full_span:
      - 0
      - 23
  - type: Variable
    var: item
    filters: []
    span:
      - 25
      - 6
    full_span:
      - 23
      - 10
  - type: Tag
    name: empty
    name_span:
      - 36
      - 5
    arguments: []
    span:
      - 35
      - 7
    full_span:
      - 33
      - 11
  - type: Text
    span:
      - 44
      - 8
    full_span:
      - 44
      - 8
  - type: Tag
    name: endfor
    name_span:
      - 55
      - 6
    arguments: []
    span:
      - 54
      - 8
    full_span:
      - 52
      - 12
