crates/djls-templates/src/snapshots/djls_templates__parser__tests__django__parse_django_if_block.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Tag
    name: if
    name_span:
      - 3
      - 2
    arguments:
      - text: user.is_authenticated
        span:
          - 6
          - 21
    span:
      - 2
      - 26
    full_span:
      - 0
      - 30
  - type: Text
    span:
      - 30
      - 7
    full_span:
      - 30
      - 7
  - type: Tag
    name: endif
    name_span:
      - 40
      - 5
    arguments: []
    span:
      - 39
      - 7
    full_span:
      - 37
      - 11
