crates/djls-templates/src/snapshots/djls_templates__parser__tests__django__parse_django_tag_assignment.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Tag
    name: url
    name_span:
      - 3
      - 3
    arguments:
      - text: "'view-name'"
        span:
          - 7
          - 11
      - text: as
        span:
          - 19
          - 2
      - text: view
        span:
          - 22
          - 4
    span:
      - 2
      - 25
    full_span:
      - 0
      - 29
