crates/djls-templates/src/snapshots/djls_templates__parser__tests__django__parse_django_variable.snap
---
source: crates/djls-templates/src/parser.rs
expression: nodelist
---
nodelist:
  - Variable:
      var: user.name
      filters: []
      span:
        start: 0
        length: 9
line_offsets:
  - 0
