crates/djls-templates/src/snapshots/djls_templates__parser__tests__django__parse_django_variable_with_filter.snap
---
source: crates/djls-templates/src/parser.rs
expression: nodelist
---
nodelist:
  - Variable:
      var: user.name
      filters:
        - title
      span:
        start: 0
        length: 15
line_offsets:
  - 0
