crates/djls-templates/src/snapshots/djls_templates__parser__tests__django__parse_filter_chains.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Variable
    var: value
    filters:
      - name: default
        arg:
          text: "'nothing'"
          span:
            - 17
            - 9
        span:
          - 9
          - 17
      - name: title
        span:
          - 27
          - 5
      - name: upper
        span:
          - 33
          - 5
    span:
      - 2
      - 37
    full_span:
      - 0
      - 41
