crates/djls-templates/src/snapshots/djls_templates__parser__tests__django__parse_nested_for_if.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Tag
    name: for
    name_span:
      - 3
      - 3
    arguments:
      - text: item
        span:
          - 7
          - 4
      - text: in
        span:
          - 12
          - 2
      - text: items
        span:
          - 15
          - 5
    span:
      - 2
      - 19
    full_span:
      - 0
      - 23
  - type: Tag
    name: if
    name_span:
      - 26
      - 2
    arguments:
      - text: item.active
        span:
          - 29
          - 11
    span:
      - 25
      - 16
    full_span:
      - 23
      - 20
  - type: Variable
    var: item.name
    filters: []
    span:
      - 45
      - 11
    full_span:
      - 43
      - 15
  - type: Tag
    name: endif
    name_span:
      - 61
      - 5
    arguments: []
    span:
      - 60
      - 7
    full_span:
      - 58
      - 11
  - type: Tag
    name: endfor
    name_span:
      - 72
      - 6
    arguments: []
    span:
      - 71
      - 8
    full_span:
      - 69
      - 12
